[gd_scene load_steps=4 format=3 uid="uid://cx2hpub5avdyh"]

[ext_resource type="Script" path="res://Battle/enemy/skills/enemy_skill_icon.gd" id="1_826io"]
[ext_resource type="Texture2D" uid="uid://cvwsif7utojiu" path="res://Battle/skills/icons/unknown_skill.png" id="1_jlm53"]
[ext_resource type="Resource" uid="uid://b3ml56xm4cody" path="res://Battle/enemy/skills/resources/rage_strike.tres" id="2_8xlhe"]

[node name="EnemySkillIcon" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
script = ExtResource("1_826io")
skill = ExtResource("2_8xlhe")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_jlm53")
centered = false
metadata/_edit_group_ = true

[node name="Shadow" type="ColorRect" parent="Sprite"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12549, 0.12549, 0.12549, 0.768627)

[node name="InfoLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_bottom = 76.0
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
metadata/_edit_group_ = true

[node name="InfoPanel" type="Panel" parent="InfoLabel"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
